force-app/main/default/objects/Discount_Approval_Log__c/Discount_Approval_Log__c.object-meta.xml
<CustomObject>
    <label>Discount Approval Log</label>
    <nameField>
        <displayFormat>DAL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Approval Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>