force-app/main/default/objects/Discount_Approval_Log__c/fields/Cost_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet__c</fullName>
    <label>Cost Sheet</label>
    <referenceTo>Cost_Sheet__c</referenceTo>
    <relationshipLabel>Discount Approval Logs</relationshipLabel>
    <relationshipName>Discount_Approval_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>