force-app/main/default/objects/Discount_Approval_Log__c/fields/Discount_Field_Number__c.field-meta.xml
<CustomField>
    <fullName>Discount_Field_Number__c</fullName>
    <label>Discount Field Number</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>