force-app/main/default/objects/Discount_Approval_Log__c/fields/Discount_Label__c.field-meta.xml
<CustomField>
    <fullName>Discount_Label__c</fullName>
    <label>Discount Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>