force-app/main/default/objects/Discount_Approval_Log__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <label>Discount Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>